--- a/SuperEconomicoApp/Views/AddUser.xaml
+++ b/SuperEconomicoApp/Views/AddUser.xaml
@@ -5,7 +5,8 @@
              xmlns:controls="clr-namespace:SuperEconomicoApp.Controls;assembly=SuperEconomicoApp"
              xmlns:control="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin">
     <ScrollView>
-    <Grid Padding="20" RowSpacing="10">
+    <Grid Padding="20,10,20,10" 
+          RowSpacing="10">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -31,7 +32,9 @@
                 x:Name="img"  
                 Source="person2"
                 VerticalOptions="Center"
-                HorizontalOptions="Center" BorderColor="#5E0F8D"  BorderThickness="1" HeightRequest="200">
+                HorizontalOptions="Center" BorderColor="#5E0F8D" 
+                BorderThickness="1" 
+                HeightRequest="180">
             <Image.GestureRecognizers>
                 <TapGestureRecognizer Tapped="AddImg" NumberOfTapsRequired="1"/>
             </Image.GestureRecognizers>
