--- a/SuperEconomicoApp/Views/LoginView.xaml
+++ b/SuperEconomicoApp/Views/LoginView.xaml
@@ -1,14 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:helpers="clr-namespace:DemoApp.Helpers"
              xmlns:vm="clr-namespace:SuperEconomicoApp.ViewsModels"
-             xmlns:controls="clr-namespace:SuperEconomicoApp.Controls;assembly=SuperEconomicoApp"
              xmlns:converter="clr-namespace:SuperEconomicoApp.Converters"
-             xmlns:behaviors="clr-namespace:SuperEconomicoApp.Behavior"
              x:Class="SuperEconomicoApp.Views.LoginView"
+             NavigationPage.HasNavigationBar="False"
              Visual="Material"
-             BackgroundImageSource="rojo_negro">
+             BackgroundColor="#5E0F8D">
     <ContentPage.Resources>
         <ResourceDictionary>
             <converter:TextToBoolCOnverter x:Key="dataConverter"/>
@@ -19,127 +17,113 @@
         <vm:LoginViewModel/>
     </ContentPage.BindingContext>
 
-    <Grid>
-
-
-        <Grid Padding="20" VerticalOptions="Center" Opacity="0.6">
+    <ContentPage.Content>
+        <Grid HorizontalOptions="FillAndExpand" 
+              VerticalOptions="FillAndExpand" >
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
 
             </Grid.RowDefinitions>
+            <Image Grid.Row="0" Margin="0,20,0,0" 
+                   Source="supermarket.png" 
+                   Aspect="AspectFit" 
+                   HeightRequest="64" 
+                   WidthRequest="64"/>
+            <Label Text="BIENVENIDO A EL ECONOMICO" 
+                   Grid.Row="1"
+                   HorizontalTextAlignment="Center"
+                   TextColor="White"
+                   FontAttributes="Bold"
+                   Margin="0,0,0,20"
+                   />
 
-            <StackLayout Grid.Row="0" VerticalOptions="Center" Spacing="10">
-                <Label Grid.Row="0"
-                   Text="El Economico" FontFamily="{StaticResource CabinSketch-Bold}"
-                   TextColor="White" FontAttributes="Bold"
-                   FontSize="55" HorizontalOptions="Center" >
-
-
-                </Label>
-                <Label 
-                   Text="Login Form" FontFamily="{StaticResource CabinSketch-Bold}"
-                   TextColor="White" FontAttributes="Bold"
-                   FontSize="40" HorizontalOptions="Center" 
-                    >
-
-                </Label>
-
-              
-            </StackLayout>
-
-            <StackLayout Grid.Row="1" Spacing="10">
-                <Frame CornerRadius="20" Padding="13" >
-                    <StackLayout Orientation="Horizontal">
-                        <Image Source="usuarioBlack" 
-                               HorizontalOptions="Start" 
-                               VerticalOptions="Center"
-                               Aspect="AspectFit"></Image>
-                        <controls:StandardEntry
+            <Frame Grid.Row="2" 
+                   Margin="20,30" 
+                   BorderColor="#5E0F8D" 
+                   HasShadow="True" 
+                   CornerRadius="50" >
+                <Grid HorizontalOptions="FillAndExpand" 
+                      VerticalOptions="FillAndExpand" 
+                      RowSpacing="20" Padding="10,20,10,20">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Label Grid.Row="0"  
+                           Text="El Economico" 
+                           FontSize="24" 
+                           FontAttributes="Bold" 
+                           TextColor="#5E0F8D" 
+                           HorizontalOptions="CenterAndExpand" />
+                    <Label Grid.Row="1" 
+                           Margin="0,-15,0,0" 
+                           Text="Inicia sesión con tu cuenta" 
+                           TextColor="#5E0F8D"  
+                           HorizontalOptions="CenterAndExpand"/>
                     
-                            Placeholder="Email" 
-                            Text="{Binding Email}" 
-                            BackgroundColor="Transparent" 
-                            HorizontalOptions="FillAndExpand"
-                            x:Name="EntryUsuario"
-                            Keyboard="Email"
-                            >
-
-                            <controls:StandardEntry.Behaviors>
-                                <behaviors:NotNullBehaviorcs x:Name="UserNN"/>
-                            </controls:StandardEntry.Behaviors>
-
-                        </controls:StandardEntry>
-                    </StackLayout>
-                </Frame>
-                <Frame CornerRadius="20"  Padding="13">
-                    <StackLayout Orientation="Horizontal" >
-                        <Image Source="passwordBlack" 
-                               HorizontalOptions="Start" 
-                               VerticalOptions="Center"
-                               Aspect="AspectFit"></Image>
-                        <controls:StandardEntry
-                            Placeholder="Password" 
-                            Text="{Binding Password}" 
-                            IsPassword="True"  
-                            BackgroundColor="Transparent" 
-                            HorizontalOptions="FillAndExpand"
-                            x:Name="EntryPassword"
-                            >
-
-
-
-                            <controls:StandardEntry.Behaviors>
-                                <behaviors:NotNullBehaviorcs x:Name="PasswordNN"/>
-                            </controls:StandardEntry.Behaviors>
-                        </controls:StandardEntry>
-
-                    </StackLayout>
-
-                </Frame>
-                <Button 
-                    Text="Login" 
-                    BackgroundColor="#5E0F8D" 
-                    TextColor="White" 
-                    WidthRequest="400" 
-                    HeightRequest="60"
-                    Command="{Binding LoginCommand}"
-                    IsEnabled="{Binding Disable}"
-                    x:Name="login"
+                    <Entry Grid.Row="2" 
+                           Placeholder="Correo Electrónico" 
+                           Margin="0,20,0,0" 
+                           Text="{Binding Email}"
+                           HorizontalOptions="FillAndExpand" 
+                           VerticalOptions="FillAndExpand"
+                           x:Name="EntryUsuario"
+                           Keyboard="Email"/>
                     
-                    Clicked="login_Clicked"
-                    CornerRadius="8">
-                    <Button.Triggers>
-                        <MultiTrigger TargetType="Button">
-                            <MultiTrigger.Conditions>
-                                <BindingCondition Binding="{Binding Source={x:Reference EntryUsuario},
-                                    Path=Text, Converter={StaticResource dataConverter}}" Value="True"/>
-                                <BindingCondition Binding="{Binding Source={x:Reference EntryPassword},
-                                    Path=Text, Converter={StaticResource dataConverter}}" Value="True"/>
-                            </MultiTrigger.Conditions>
-                            <Setter Property="IsEnabled" Value="True"/>
-                        </MultiTrigger>
-                    </Button.Triggers>
-                </Button>
+                    <Entry Grid.Row="3" 
+                           Placeholder="Password" 
+                           Text="{Binding Password}"
+                           IsPassword="True" 
+                           HorizontalOptions="FillAndExpand" 
+                           VerticalOptions="FillAndExpand"
+                           x:Name="EntryPassword"/>
+                    
+                    <Button Grid.Row="4" 
+                            Text="Login" 
+                            BackgroundColor="#5E0F8D" 
+                            TextColor="White"
+                            Command="{Binding LoginCommand}"
+                            CornerRadius="20"
+                            x:Name="login"
+                            Clicked="login_Clicked"/>
+                    
+                    <Label Grid.Row="7" 
+                           Text="¿Olvidastes tu contraseña?" 
+                           FontAttributes="Bold" 
+                           HorizontalOptions="CenterAndExpand">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="btnRecoveryPass" NumberOfTapsRequired="1"/>
+                        </Label.GestureRecognizers>
+                    </Label>
+                    
+                    <StackLayout Orientation="Horizontal"
+                                 Grid.Row="8"
+                                 HorizontalOptions="Center">
+                        <Label Text="¿No tienes una cuenta?"
+                               FontAttributes="Italic"/>
+                        <Label Text="Registrate aquí" 
+                               TextColor="#2471A3"
+                               FontAttributes="Bold">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding RegisterCommand}"/>
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </StackLayout>
+                    
 
-
-                <Button 
-                    Text="REGISTRAR" 
-                    BackgroundColor="#5E0F8D" 
-                    TextColor="White" 
-                    WidthRequest="400" 
-                    HeightRequest="60"
-                    Command="{Binding RegisterCommand}"
-                    CornerRadius="8"/>
-
-                <Label Text="¿Olvidastes tu contraseña? " TextColor="White" HorizontalTextAlignment="Center">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="btnRecoveryPass" NumberOfTapsRequired="1"/>
-                    </Label.GestureRecognizers>
-                </Label>
-            </StackLayout>
-
+                </Grid>
+            </Frame>
         </Grid>
-    </Grid>
+    </ContentPage.Content>
+
+
 </ContentPage>
