--- a/SuperEconomicoApp/Views/CartView.xaml
+++ b/SuperEconomicoApp/Views/CartView.xaml
@@ -43,7 +43,7 @@
                                VerticalOptions="Center"
                                TextColor="Black"/>
 
-                    <Label Text="{Binding TotalCost, StringFormat='L. {0:F0}'}"
+                    <Label Text="{Binding TotalCost, StringFormat='L. {0:N2}'}"
                                FontSize="17"
                                FontAttributes="Bold"
                                HorizontalOptions="EndAndExpand"
@@ -78,7 +78,7 @@
                                     <Label Text="{Binding ProductName}"
                                                FontSize="17"
                                                FontAttributes="Bold"/>
-                                    <Label Text="{Binding Price, StringFormat='L. {0:F0}'}"
+                                    <Label Text="{Binding Price, StringFormat='L. {0:N2}'}"
                                                FontSize="16"
                                                FontAttributes="Italic"/>
                                 </StackLayout>
