--- a/SuperEconomicoApp/Views/ConfirmOrderView.xaml
+++ b/SuperEconomicoApp/Views/ConfirmOrderView.xaml
@@ -187,7 +187,7 @@
                                                FontSize="16"
                                                FontAttributes="Bold"
                                                TextColor="Black"/>
-                                        <Label Text="{Binding Price, StringFormat='L. {0:F0}'}"
+                                        <Label Text="{Binding Price, StringFormat='L. {0:N2}'}"
                                                FontSize="16"
                                                FontAttributes="Bold"/>
                                     </StackLayout>
