--- a/SuperEconomicoApp/Views/Delivery/ActiveOrdersDeliveryView.xaml
+++ b/SuperEconomicoApp/Views/Delivery/ActiveOrdersDeliveryView.xaml
@@ -88,7 +88,7 @@
                                     </StackLayout>
 
                                 </StackLayout>
-                                <Label Text="{Binding Total, StringFormat='L. {0:F0}'}"
+                                <Label Text="{Binding Total, StringFormat='L. {0:N2}'}"
                                                FontSize="15"
                                                FontAttributes="Bold"
                                                HorizontalTextAlignment="End"/>
