--- a/SuperEconomicoApp/Views/Delivery/ActiveOrdersDetailDeliveryView.xaml
+++ b/SuperEconomicoApp/Views/Delivery/ActiveOrdersDetailDeliveryView.xaml
@@ -83,7 +83,7 @@
                                VerticalOptions="Center"
                                TextColor="Black"/>
 
-                            <Label Text="{Binding Total, StringFormat='L. {0:F0}'}"
+                            <Label Text="{Binding Total, StringFormat='L. {0:N2}'}"
                                FontSize="17"
                                FontAttributes="Bold"
                                HorizontalOptions="EndAndExpand"
@@ -119,7 +119,7 @@
                                             <Label Text="{Binding name_product}"
                                                FontSize="17"
                                                FontAttributes="Bold"/>
-                                            <Label Text="{Binding price, StringFormat='L. {0:F0}'}"
+                                            <Label Text="{Binding price, StringFormat='L. {0:N2}'}"
                                                FontSize="16"
                                                FontAttributes="Italic"/>
                                         </StackLayout>
