--- a/SuperEconomicoApp/Views/LoginView.xaml
+++ b/SuperEconomicoApp/Views/LoginView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:SuperEconomicoApp.ViewsModels"
              xmlns:converter="clr-namespace:SuperEconomicoApp.Converters"
+             xmlns:local="clr-namespace:SuperEconomicoApp.Helpers"
              x:Class="SuperEconomicoApp.Views.LoginView"
              NavigationPage.HasNavigationBar="False"
              Visual="Material"
@@ -69,7 +70,7 @@
                            Text="Inicia sesión con tu cuenta" 
                            TextColor="#5E0F8D"  
                            HorizontalOptions="CenterAndExpand"/>
-                    
+
                     <Entry Grid.Row="2" 
                            Placeholder="Correo Electrónico" 
                            Margin="0,20,0,0" 
@@ -78,15 +79,33 @@
                            VerticalOptions="FillAndExpand"
                            x:Name="EntryUsuario"
                            Keyboard="Email"/>
-                    
-                    <Entry Grid.Row="3" 
+
+
+                        <Entry Grid.Row="3"  
                            Placeholder="Password" 
                            Text="{Binding Password}"
-                           IsPassword="True" 
+                           IsPassword="{Binding Source={x:Reference ShowPasswordActualTrigger}, Path=HidePassword}" 
                            HorizontalOptions="FillAndExpand" 
                            VerticalOptions="FillAndExpand"
                            x:Name="EntryPassword"/>
-                    
+
+                        <ImageButton VerticalOptions="Center"
+                                     HeightRequest="20"
+                                     Margin="0,0,8,0"
+                                     HorizontalOptions="End"
+                                     Source="ic_eye_hide"
+                                     Grid.Row="3">
+                            <ImageButton.Triggers>
+                                <EventTrigger Event="Clicked">
+                                    <local:ShowPasswordTriggerAction ShowIcon="ic_eye"
+                                                                     HideIcon="ic_eye_hide"
+                                                                     x:Name="ShowPasswordActualTrigger"/>  
+                                </EventTrigger>
+                            </ImageButton.Triggers>
+                        </ImageButton>
+
+
+
                     <Button Grid.Row="4" 
                             Text="Login" 
                             BackgroundColor="#5E0F8D" 
@@ -95,7 +114,7 @@
                             CornerRadius="20"
                             x:Name="login"
                             Clicked="login_Clicked"/>
-                    
+
                     <Label Grid.Row="7" 
                            Text="¿Olvidastes tu contraseña?" 
                            FontAttributes="Bold" 
@@ -104,7 +123,7 @@
                             <TapGestureRecognizer Tapped="btnRecoveryPass" NumberOfTapsRequired="1"/>
                         </Label.GestureRecognizers>
                     </Label>
-                    
+
                     <StackLayout Orientation="Horizontal"
                                  Grid.Row="8"
                                  HorizontalOptions="Center">
@@ -118,7 +137,7 @@
                             </Label.GestureRecognizers>
                         </Label>
                     </StackLayout>
-                    
+
 
                 </Grid>
             </Frame>
