--- a/SuperEconomicoApp/Views/SendRecoveryPass.xaml
+++ b/SuperEconomicoApp/Views/SendRecoveryPass.xaml
@@ -6,22 +6,37 @@
              Visual="Material">
     <ContentPage.Content>
         <StackLayout VerticalOptions="CenterAndExpand">
-            <Label Text="Recuperar contraseña" FontSize="Title" HorizontalTextAlignment="Center" FontFamily="{StaticResource CabinSketch-Bold}"/>
-            <Label Text="Ingresa tu correo electrónico y te enviaremos las instrucciones para actualizar tu contraseña." FontSize="16" Margin="20,0,20,0"/>
-            <controls:StandardEntry
-            Grid.Row="2"
-            Padding="13"
-             BackgroundColor="White"
-            BorderThickness="1"
-            TextColor="Black"
-            CornerRadius="20"
-            Placeholder="Ingrese su correo electronico"
-            x:Name="RecoveryEmail"
-            Keyboard="Email" 
-            FontSize="Default"
-            Margin="20,10,20,0"
-            />
-            <Button Text="Enviar" CornerRadius="8"  BackgroundColor="#5E0F8D" TextColor="White" Margin="150,10,20,0" x:Name="btnSendCodigo" Clicked="btnSendCodigo_Clicked"/>
+
+            <Image Source="password_recovery.png"
+                   HeightRequest="140"/>
+
+            <Label Text="Recuperar contraseña" 
+                   FontSize="Title" 
+                   HorizontalTextAlignment="Center" 
+                   FontFamily="{StaticResource CabinSketch-Bold}"
+                   TextColor="#5E0F8D"/>
+            <Label Text="Ingresa tu correo electrónico y te enviaremos las instrucciones para actualizar tu contraseña." 
+                   FontSize="16" 
+                   Margin="20,0,20,0"/>
+                <controls:StandardEntry
+                    Grid.Row="2"
+                    Padding="13"
+                    BackgroundColor="White"
+                    BorderThickness="1"
+                    TextColor="Black"
+                    CornerRadius="20"
+                    Placeholder="Ingrese su correo electronico"
+                    x:Name="RecoveryEmail"
+                    Keyboard="Email" 
+                    FontSize="Default"
+                    Margin="20,10,20,0"/>
+            
+            <Button Text="Enviar" CornerRadius="8" 
+                    BackgroundColor="#5E0F8D" 
+                    TextColor="White" 
+                    Margin="150,10,20,0" 
+                    x:Name="btnSendCodigo" 
+                    Clicked="btnSendCodigo_Clicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
