Solucion de errores #1, listo para testear

--- a/SuperEconomicoApp/Views/AddCommentView.xaml
+++ b/SuperEconomicoApp/Views/AddCommentView.xaml
@@ -28,7 +28,8 @@
             </StackLayout>
         </Grid>
 
-        <StackLayout Padding="15">
+        <StackLayout Padding="15"
+                     VerticalOptions="CenterAndExpand">
 
             <StackLayout Orientation="Horizontal"
                      HorizontalOptions="Center">
